[Java] Fix warning on JDK 21.